@@ -293,6 +293,8 @@ typedef struct
         char domain_name[FDFS_DOMAIN_NAME_MAX_SIZE];
         char init_flag;
 	signed char status;
+	int other_tracker_count;
+	TrackerServerInfo other_tracker_servers[FDFS_MAX_TRACKERS];
 } FDFSStorageJoinBody;
 
 struct tracker_thread_data
